Downloading bazel with progress